fix footer and off-canvas z-index battle

--- a/wp-content/themes/k1-theme/src/styles/components/_footer.scss
+++ b/wp-content/themes/k1-theme/src/styles/components/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
 	position: relative;
-	z-index: 9999;
 	.socials {
 		--svg-size: 6rem;
 
